--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,10 +2,67 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Proyecto Django by Jaime Romero Miranda 😎</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <style>
+            * {
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                
+            }
+
+            body {
+                background-color:    #ffffff;
+                
+            }
+            a {
+               text-decoration: none;
+               font-weight: bold;
+               color: #ffffff;
+            }
+            article.post {
+                background-color: #ffffff;
+                border: solid;
+                border-color: #88055C;
+                border-radius: 10px;
+                padding-top: 30px;
+                padding-left: 30px;
+                padding-right: 30px;
+                padding-bottom: 100px;
+            }
+            article.post p {
+                color: #FFB547;
+                font-weight: bold;
+                color: #C60238;
+                text-transform: uppercase
+            }
+            div.col h2 {
+                background-color: #d93647;
+                border-radius: 10px;
+                padding-top: 15px;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-bottom: 15px;
+                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                font-weight: bold;
+                color: #ffffff;
+            }
+            time.date {
+                color: #ffffff;
+                font-weight: bold;
+                padding-right: 15px;
+                padding-top: 7px;
+            }
+            .page-header {
+                background: rgb(217,54,71);
+                background: linear-gradient(90deg, rgba(217,54,71,1) 0%, rgba(129,0,94,1) 50%, rgba(34,78,125,1) 100%);
+            }
+            article.post h2 a:visited {
+                color: #ffffff;
+            }
+
+        </style>
     </head>
     <body>
             <header class="page-header">
@@ -15,7 +72,7 @@
                         {% include './icons/file-earmark-plus.svg' %}
                     </a>
                 {% endif %}                
-                  <h1><a href="/">Proyecto Django by Jaime Romero Miranda 😎</a></h1>
+                  <h1><center><a href="/">Proyecto Django by Jaime Romero Miranda 😎</a></center></h1>
               </div>
             </header>
             <main class="container">
